// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperOracles add oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52947,
}
`;

exports[`KeeperOracles remove oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 31129,
}
`;

exports[`KeeperOracles update config succeeds 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 27005,
}
`;
